# daggerverse

./: .gitignore  README.md  cliff.toml  dagger.json  devenv.nix  devenv.yaml  prek.toml  pyproject.toml
.dagger/: pyproject.toml
.dagger/src/typesafe_daggerverse/: __init__.py  main.py
.docs/: pyproject.toml  zensical.toml
.docs/docs/: index.md
.docs/overrides/: main.html
.docs/overrides/partials/: header.html
.github/workflows/: CI.yml  deploy-docs.yml  publish.yml  release.yml
actionlint/: dagger.json  pyproject.toml
actionlint/src/actionlint/: __init__.py  main.py
actionlint/tests/: test_main.py
cloudflare/: dagger.json  pyproject.toml
cloudflare/src/cloudflare/: __init__.py  main.py  pages.py  wrangler_container.py
docs/superpowers/specs/: 2026-05-05-wait-github-dagger-checks-design.md
github/: README.md  dagger.json  pyproject.toml
github-status-monitor/: README.md  dagger.json  pyproject.toml
github-status-monitor/src/github_status_monitor/: __init__.py  github.py  main.py  params.py  watcher.py
github-status-monitor/tests/: test_github.py  test_watcher.py
github/src/github/: __init__.py  main.py
github/src/github/status_monitor/: __init__.py  api.py  main.py  params.py  render.py  watcher.py
github/tests/: test_github.py  test_watcher.py
pinact/: README.md  dagger.json  pyproject.toml
pinact/src/pinact/: __init__.py  main.py
ruff/: dagger.json  pyproject.toml  zensical.toml
ruff/docs/: index.md
ruff/site/: 404.html  index.html  search.json  sitemap.xml
ruff/src/ruff/: __init__.py  args.py  checker.py  formatter.py  main.py  utils.py
ruff/tests/: test_utils.py
ruff/tests/_fixtures/: pypi_ruff_subset.json  pyproject_no_ruff.toml  pyproject_with_ruff.toml  ruff_toml_exact.toml  ruff_toml_range.toml  uv_lock_pinned.toml
twingate/: dagger.json  pyproject.toml
twingate/src/twingate/: __init__.py  main.py
uv/: .gitignore  README.md  dagger.json  overrides  pyproject.toml  zensical.toml
uv-workspace/: dagger.json  pyproject.toml
uv-workspace/src/uv_workspace/: __init__.py  _codegen.py  _utils.py  main.py  params.py  remote_build.py  sync_plan.py
uv-workspace/tests/: test_uv_workspace.py
uv-workspace/tests/_packages/partial-workspace/my-dep/: pyproject.toml
uv-workspace/tests/_packages/standalone-app/: pyproject.toml
uv-workspace/tests/_packages/workspace/: pyproject.toml
uv-workspace/tests/_packages/workspace-app/my-app/: pyproject.toml
uv-workspace/tests/_packages/workspace-app/my-lib/: pyproject.toml
uv-workspace/tests/_packages/workspace-flat/: pyproject.toml
uv-workspace/tests/_packages/workspace-flat/my-lib/: pyproject.toml
uv-workspace/tests/_packages/workspace/my-app/: pyproject.toml
uv-workspace/tests/_packages/workspace/my-lib/src/my_lib/: __init__.py
uv/docs/: building.md  index.md  virtual-environments.md
uv/docs/checks/: audit.md
uv/src/uv/: __init__.py  args.py  main.py  utils.py
uv/src/uv/workspace/: __init__.py  _codegen.py  audit.py  build.py  index.py  package.py  plan.py  venv.py  workspace.py
uv/tests/: test_utils.py  test_workspace_resolution.py
uv/tests/_packages/: partial-workspace  standalone-app  workspace  workspace-app  workspace-flat
uv/tests/_packages/clean/: pyproject.toml
uv/tests/_packages/nested-standalone/app/: pyproject.toml
uv/tests/_packages/nested-standalone/my-lib/: pyproject.toml
uv/tests/_packages/partial-workspace/sub-project/: pyproject.toml
uv/tests/_packages/standalone-app/: pyproject.toml
uv/tests/_packages/standalone-app/src/standalone_app/: __init__.py
uv/tests/_packages/vulnerable/: pyproject.toml
uv/tests/_packages/workspace/: pyproject.toml
uv/tests/_packages/workspace-app/: pyproject.toml
uv/tests/_packages/workspace-flat/my-app/: pyproject.toml
uv/tests/_packages/workspace-flat/my-core/: pyproject.toml
uv/tests/_packages/workspace/my-app/: pyproject.toml
uv/tests/_packages/workspace/my-core/: pyproject.toml
uv/tests/_packages/workspace/my-core/src/my_core/: __init__.py
wait-github-dagger-checks/: README.md  dagger.json  pyproject.toml
wait-github-dagger-checks/src/wait_github_dagger_checks/: __init__.py  github.py  main.py  render.py  types.py  watcher.py
wait-github-dagger-checks/tests/: test_watcher.py
zizmor/: README.md  dagger.json  pyproject.toml
zizmor/src/zizmor/: __init__.py  main.py
(+2 files in other folders)
