[project]
name = "standalone-app"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "danielgafni", email = "danielgafni16@gmail.com" }
]
requires-python = ">=3.14"
dependencies = []

[project.optional-dependencies]
viz = ["tabulate"]
net = ["idna"]

[dependency-groups]
docs = ["six"]
qa = ["packaging"]

[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"
