[project]
name = "my-lib"
version = "0.1.0"
description = "A flat-layout library"
authors = [
    { name = "danielgafni", email = "danielgafni16@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "my-core",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
my-core = { workspace = true, editable = true }
