[project]
name = "my-app"
version = "0.1.0"
description = "A src-layout app depending on flat-layout libs"
authors = [
    { name = "danielgafni", email = "danielgafni16@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "my-lib",
]

[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"

[tool.uv.sources]
my-lib = { workspace = true, editable = true }
